sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/InfixExpression.sand
pub class InfixExpression {
    foo() {
        [
            x() ** x(),

            x() * x(),
            x() / x(),
            x() % x(),

            x() + x(),
            x() - x(),

            x() < x(),
            x() <= x(),
            x() > x(),
            x() >= x(),

            x() ~< x(),
            x() ~<= x(),
            x() ~> x(),
            x() ~>= x(),

            x() == x(),
            x() != x(),

            x() ~= x(),
            x() !~= x(),

            x() && x(),
            x() || x(),
        ]
    }
}