sandc/test/fixtures/astRegression/shouldFail/productions/castExpression/CastToList.sand
pub class CastToList {
    foo() {
        a as Foo[+]
    }
}